@startuml

title __LIST ITEMS's Class Diagram__\n

package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.model {
        class BookListItem {
            - cover : Bitmap
            - coverId : String
            - title : String
            - author : String
            - isbn : String
            - status : String
            - ownerId : String
            {static} + getComparator()
            + BookListItem()
            + BookListItem()
            + BookListItem()
            + getCover()
            + setCover()
            + getTitle()
            + setTitle()
            + getAuthor()
            + setAuthor()
            + getIsbn()
            + setIsbn()
            + getStatus()
            + setStatus()
            + getOwnerId()
            + setOwnerId()
            + getCoverId()
            + setCoverId()
        }
    }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.model {
        class BookListItemComparator {
            + compare()
        }
    }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.model {
        class OwnerListItem {
            - ownerPic : Bitmap
            - ownerUsername : String
            - ownerId : String
            - isbn : String
            - status : String
            {static} + getComparator()
            + OwnerListItem()
            + OwnerListItem()
            + getOwnerPic()
            + setOwnerPic()
            + getOwnerUsername()
            + setOwnerUsername()
            + getOwnerId()
            + setOwnerId()
            + getIsbn()
            + setIsbn()
            + getStatus()
            + setStatus()
        }
    }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.model {
        class OwnerListItemComparator {
            + compare()
        }
    }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.model {
        class UserListItem {
            - borrowerPic : Drawable
            - borrowerUsername : String
            - isbn : String
            - borrowerId : String
            + UserListItem()
            + UserListItem()
            + getBorrowerPic()
            + setBorrowerPic()
            + getBorrowerUsername()
            + setBorrowerUsername()
            + getIsbn()
            + setIsbn()
            + getBorrowerId()
            + setBorrowerId()
        }
    }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.model {
        class Book {
            - isbn : String
            - title : String
            - author : String
            - description : String
            - imageId : String
            - availableFrom : Map<String, Integer>
            + Book()
            + Book()
            + Book()
            + getIsbn()
            + getTitle()
            + setTitle()
            + getAuthor()
            + setAuthor()
            + getDescription()
            + setDescription()
            + getImageId()
            + setImageId()
            + getAvailableOwners()
            + getAvailableFrom()
        }
    }
}


package ca.ualberta.CMPUT3012019T02.alexandria {
    package ca.ualberta.CMPUT3012019T02.alexandria.model {
        package ca.ualberta.CMPUT3012019T02.alexandria.model.user {
            class User {
                - chatRooms : Map<String, String>
                - ownedBooks : Map<String, OwnedBook>
                - borrowedBooks : Map<String, BorrowedBook>
                - profile : UserProfile
                - id : String
                + User()
                + getChatRooms()
                + getOwnedBooks()
                + getBorrowedBooks()
                + getProfile()
                + getId()
            }
        }
    }
}

BookListItem "*" -- "1" User : ownerId
BookListItem "*" -- "1" Book : isbn

OwnerListItem "1" -- "1" User : ownerId
UserListItem "1" -- "1" User : borrowerId

BookListItemComparator -up-|> Comparator
OwnerListItemComparator -up-|> Comparator

right footer


    PlantUML diagram partly generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
    For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml